hotfix error correction
updated authentication error handler